k8s/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zerotrust-auth
  labels:
    app: auth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: 494003775847.dkr.ecr.eu-north-1.amazonaws.com/zerotrust-auth:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
