k8s/lifecycle.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zerotrust-lifecycle
  labels:
    app: lifecycle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lifecycle
  template:
    metadata:
      labels:
        app: lifecycle
    spec:
      containers:
      - name: lifecycle
        image: 494003775847.dkr.ecr.eu-north-1.amazonaws.com/zerotrust-lifecycle:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: lifecycle-service
spec:
  type: ClusterIP
  selector:
    app: lifecycle
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
